infrastructure/zot/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: zot-buffering
  namespace: default
spec:
  buffering:
    maxRequestBodyBytes: 0
    maxResponseBodyBytes: 0
