infrastructure/zot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zot
  namespace: default
spec:
  selector:
    app: zot
  ports:
    - port: 5000
      targetPort: 5000
  type: NodePort
